--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
+    "vue-sticky-directive": "^0.0.6",
     "vue2-transitions": "^0.2.3",
     "vuex": "^3.0.1"
   },
