--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-observe-visibility": "^0.4.1",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
     "vue-sticky-directive": "^0.0.6",
