--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "intersection-observer": "^0.5.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-observe-visibility": "^0.4.1",
