--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "intersection-observer": "^0.5.0",
     "register-service-worker": "^1.0.0",
+    "reset-css": "^4.0.1",
     "vue": "^2.5.17",
     "vue-observe-visibility": "^0.4.1",
     "vue-router": "^3.0.1",
