--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.0.0",
     "reset-css": "^4.0.1",
     "vue": "^2.5.17",
+    "vue-lazyload": "^1.2.6",
     "vue-observe-visibility": "^0.4.1",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
