--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "vue-cli-service test:e2e",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
     "intersection-observer": "^0.5.0",
@@ -23,6 +24,10 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.4",
+    "@storybook/addon-knobs": "^4.1.4",
+    "@storybook/addon-viewport": "^4.1.4",
+    "@storybook/vue": "^4.1.4",
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-e2e-cypress": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
@@ -33,8 +38,11 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-vue": "^2.0.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-loader": "^15.5.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
